--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@tanstack/react-query": "5.0.0",
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "10.4.15",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
